--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Some person learning new skills</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Amsterdam, NY</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Games, Movies, Running, and Guitar</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software Dev</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>San Diego, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Steps towards a career in computer science</p>
     </section>
 
     <footer id="footer">
